--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
   <head>
     <title>Underground | Home</title>
+    <link rel="icon" type="image/png" href="Images&Videos/logo-alt.png" />
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-pills ">
-      <a class="navbar-brand" href="index.html">The Underground</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="/Images&Videos/logo-alt.png" width="50" height="50" alt=""> The Underground</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -125,14 +127,23 @@
             <div class="form-group input-group mb-3">
               <input
                 type="text"
-                class="field form-control"
+                class="field form-control w-50"
                 placeholder="Search here..."
                 name="entity"
                 aria-label="entity"
                 aria-describedby="entity-search"
                 value=""
               />
-              <span class="input-group-append">
+              <select class="form-control" id="inputGroupSelect01">
+                <option selected>All Catergories</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+                <option value="4">Four</option>
+                <option value="5">Five</option>
+                <option value="6">Six</option>
+              </select>
+              <div class="input-group-append">
                 <button
                   class="btn btn-secondary btn-search"
                   id="searchsubmit"
@@ -140,108 +151,8 @@
                 >
                   Search
                 </button>
-              </span>
-            </div>
-            <fieldset class="form-group">
-              <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0 text-white">
-                  Categories:
-                </legend>
-                <div class="col-sm-10lma">
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios1"
-                      value="option1"
-                      checked
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios1"
-                    >
-                      First radio
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios2"
-                      value="option2"
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios2"
-                    >
-                      Second radio
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios3"
-                      value="option3"
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios3"
-                    >
-                      Third radio
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios4"
-                      value="option4"
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios4"
-                    >
-                      Fourth radio
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios5"
-                      value="option5"
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios5"
-                    >
-                      Fifth radio
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="gridRadios"
-                      id="gridRadios6"
-                      value="option6"
-                    />
-                    <label
-                      class="form-check-label text-white"
-                      for="gridRadios6"
-                    >
-                      Sixth radio
-                    </label>
-                  </div>
-                </div>
               </div>
-            </fieldset>
+            </div>
           </form>
         </div>
         <div class="tab-pane" id="add" role="tabpanel">
