--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               href="#add"
               role="tab"
               data-toggle="list"
-              >Add</a
+              >Buy</a
             >
           </li>
           <li class="nav-item">
@@ -130,11 +130,11 @@
                 class="field form-control w-50"
                 placeholder="Search here..."
                 name="entity"
-                aria-label="entity"
+                aria-label="enti  ty"
                 aria-describedby="entity-search"
                 value=""
               />
-              <select class="form-control" id="inputGroupSelect01">
+              <select class="form-control border" id="categories">
                 <option selected>All Catergories</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
