--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-pills ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-pills sticky-top">
       <a class="navbar-brand" href="index.html">
         <img src="/Images&Videos/logo-alt.png" width="50" height="50" alt=""> The Underground</a>
       <button
@@ -58,10 +58,28 @@
           <li class="nav-item">
             <a
               class="nav-link border-0 btn-outline-light"
-              href="#add"
+              href="#sell"
               role="tab"
               data-toggle="list"
-              >Buy</a
+              >Sell</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link border-0 btn-outline-light"
+              href="#auction"
+              role="tab"
+              data-toggle="list"
+              >Auction</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link border-0 btn-outline-light"
+              href="#about"
+              role="tab"
+              data-toggle="list"
+              >About</a
             >
           </li>
           <li class="nav-item">
@@ -103,11 +121,25 @@
             >Home <span class="sr-only">(current)</span></a
           >
           <a
-            href="#add"
+            href="#sell"
             class="list-group-item list-group-item-dark list-group-item-action"
             role="tab"
             data-toggle="list"
-            >Add Entity</a
+            >Sell</a
+          >
+          <a
+            href="#auction"
+            class="list-group-item list-group-item-dark list-group-item-action"
+            role="tab"
+            data-toggle="list"
+            >Auction</a
+          >
+          <a
+            href="#about"
+            class="list-group-item list-group-item-dark list-group-item-action"
+            role="tab"
+            data-toggle="list"
+            >About</a
           >
           <a
             href="#view"
@@ -119,9 +151,43 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid position-absolute" style="top:12% !important;">
       <div class="tab-content">
         <div class="tab-pane active" id="home" role="tabpanel">
+          <div id="adslides" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="https://wallpaperstock.net/matrix_wallpapers_34861_852x480.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>AD 1</h3>
+                  <p>...</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://wallpaperstock.net/matrix_wallpapers_34861_852x480.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>AD 2</h3>
+                  <p>...</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://wallpaperstock.net/matrix_wallpapers_34861_852x480.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>AD 3</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#adslides" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#adslides" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="container mt-5" style="top:40% !important;">
           <h1 class="text-center p-3 text-white">Underground</h1>
           <form method="POST" action="test.php" role="search">
             <div class="form-group input-group mb-3">
@@ -130,7 +196,7 @@
                 class="field form-control w-50"
                 placeholder="Search here..."
                 name="entity"
-                aria-label="enti  ty"
+                aria-label="entity"
                 aria-describedby="entity-search"
                 value=""
               />
@@ -154,9 +220,56 @@
               </div>
             </div>
           </form>
+          <div class="card bg-transparent border border-logored">
+          <h2 class="card-header text-white border-0">Recommended</h2>
+          <div class="card-body mb-3 border-0">
+            <div class="card-deck border-0">
+              <a href="https://www.kinder.com/ca/en/">
+                <div class="card card-inverse text-white bg-logored" style="width: 12rem;">
+                  <img class="card-img-top img-responsive" src="https://az836796.vo.msecnd.net/media/image/product/en/medium/0006202000005.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="https://www.kinder.com/ca/en/">
+                <div class="card card-inverse text-white bg-logored" style="width: 12rem;">
+                  <img class="card-img-top img-responsive" src="https://az836796.vo.msecnd.net/media/image/product/en/medium/0006202000005.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="https://www.kinder.com/ca/en/">
+                <div class="card card-inverse text-white bg-logored" style="width: 12rem;">
+                  <img class="card-img-top img-responsive" src="https://az836796.vo.msecnd.net/media/image/product/en/medium/0006202000005.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                  </div>
+                </div>
+              </a>
+              
+              <a href="https://www.kinder.com/ca/en/">
+                <div class="card card-inverse text-white bg-logored" style="width: 12rem;">
+                  <img class="card-img-top img-responsive" src="https://az836796.vo.msecnd.net/media/image/product/en/medium/0006202000005.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="tab-pane" id="add" role="tabpanel">
-          <p>Add</p>
+      </div>
+        </div>
+        <div class="tab-pane" id="sell" role="tabpanel">
+          <p class="text-white">Sell</p>
+        </div>
+        <div class="tab-pane" id="auction" role="tabpanel">
+          <p class="text-white">Auction</p>
+        </div>
+        <div class="tab-pane" id="about" role="tabpanel">
+          <p class="text-white">About</p>
         </div>
         <div class="tab-pane" id="view" role="tabpanel">
           <p>View</p>
