--- a/search_results.html
+++ b/search_results.html
@@ -24,9 +24,9 @@
       aria-controls="navToggler" aria-expanded="false" aria-label="Open Menu">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <ul class="justify-content-end mt-4 ml-5" style="width: 60%">
+    <div class="justify-content-end" style="width: 60%">
       <form method="POST" action="test.php" role="search">
-        <div class="form-group input-group">
+        <div class="form-group input-group ">
           <input type="text" class="field form-control rounded-left" placeholder="Search here..." name="entity"
             aria-label="entity" aria-describedby="entity-search" value="" />
           <div class="input-group-append">
@@ -45,7 +45,7 @@
           </div>
         </div>
       </form>
-    </ul>
+    </div>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="nav justify-content-center">
         <li class="nav-item">
@@ -61,7 +61,7 @@
       </ul>
     </div>
     <ul class="nav justify-content-end">
-      <li class="nav-item pl-3">
+      <li class="nav-item pl-1">
         <a class="nav-link border-0 btn btn-sm btn-circle btn-outline-light d-flex justify-content-center align-items-center"
           style="overflow: hidden;" href="#account" role="tab" data-toggle="modal"><i class="fa fa-user"
             style="font-size: 1.8em;"></i></a>
