--- a/product.html
+++ b/product.html
@@ -148,7 +148,7 @@
               <div class="lead">Returns: NONE</div>
             </div>
             <div class="col">
-              <div class="card bg-transparent" style="width: 18rem;">
+              <div class="card bg-transparent border border-logored" style="width: 18rem;">
                 <div class="card-body">
                   <h6 class="card-subtitle mb-2"></h6>
                   <div class="card-text"><span id="stock">90</span> - In Stock</div>
