updated category types

--- a/search_results.html
+++ b/search_results.html
@@ -33,12 +33,10 @@
           <div class="input-group-append">
             <select class="form-control border w-100 rounded-0" id="categories">
               <option selected>All Catergories</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-              <option value="4">Four</option>
-              <option value="5">Five</option>
-              <option value="6">Six</option>
+              <option value="1">Hitmen</option>
+              <option value="2">Substances</option>
+              <option value="3">Exotics</option>
+              <option value="4">Weapons</option>
             </select>
             <button class="btn btn-secondary btn-search" id="searchsubmit" type="submit">
               Search
