--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
                 aria-label="entity" aria-describedby="entity-search" value="" />
               <select class="form-control border" id="categories">
                 <option selected>All Catergories</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                <option value="4">Four</option>
-                <option value="5">Five</option>
-                <option value="6">Six</option>
+                <option value="1">Hitmen</option>
+                <option value="2">Substances</option>
+                <option value="3">Exotics</option>
+                <option value="4">Weapons</option>
               </select>
               <div class="input-group-append">
                 <button class="btn btn-secondary btn-search" id="searchsubmit" type="submit">
