--- a/forgot_password.html
+++ b/forgot_password.html
@@ -196,6 +196,7 @@
           <div class="tab-content">
             <div class="tab-pane fade in show active" id="login" role="tabpanel">
               <div class="modal-body mb-1">
+                <form method="POST" action="test.php" role="form">
                 <div class="form-group">
                   <div class="md-form form-sm input-group mt-5 mb-5">
                     <div class="input-group-prepend">
@@ -225,6 +226,7 @@
                     Log in <i class="fa fa-sign-in ml-1"></i>
                   </button>
                 </div>
+                </form>
               </div>
               <div class="modal-footer">
                 <div class="options text-center text-md-right mt-1">
@@ -241,6 +243,7 @@
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel">
               <div class="modal-body">
+          <form method="POST" action="test.php" role="form">
                 <div class="form-group">
                   <div class="md-form form-sm input-group mt-5 mb-4">
                     <div class="input-group-prepend">
@@ -326,7 +329,8 @@
                     Sign up <i class="fa fa-sign-in ml-1"></i>
                   </button>
                 </div>
-              </div>
+              </form>
+            </div>
               <div class="modal-footer">
                 <div class="options text-right">
                   <p class="pt-1">
