--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,95 @@
   <div class="position-absolute w-100">
     <div class="tab-content">
       <div class="tab-pane active" id="home" role="tabpanel">
-
+        <div class="container p-3">
+          <div class="text-center">
+            <img src="Images&Videos/logo-alt2.png" class="img-responsive w-50">
+            <h1 class="text-logored">EDP445</h1>
+          </div>
+          <button class="btn btn-success float-right" type="button" data-toggle="collapse" data-target="#editProfile" aria-expanded="false" aria-controls="edit-profile">
+            Edit Profile
+          </button>
+          <div class="collapse  p-3" id="editProfile">
+          <form method="POST" action="test.php" role="form">
+          <div class="form-group">
+            <div class="form-md input-group mt-5 mb-4">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="pEmail"><i class="fa fa-envelope prefix"></i></span>
+              </div>
+              <input type="email" id="newEmail" class="form-control form-control-md validate"
+                placeholder="Email Address" value="EDP445@gmail.com" />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-md input-group mb-4">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="pUser"><i class="fa fa-user-circle-o prefix"></i></span>
+              </div>
+              <input type="text" id="username" class="form-control form-control-md validate rounded-right"
+                placeholder="Username" aria-describedby="userHelpInline" value="EDP445"/>
+              <small id="userHelpInline" class="text-muted ml-3 mt-1">
+                *Minimum of 8 characters, must have letters, numbers, and any special characters.
+              </small>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="form-group">
+                <div class="form-md input-group mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="pFname"><i class="fa fa-user-o prefix"></i></span>
+                  </div>
+                  <input type="text" id="fname" class="form-control form-control-md validate"
+                    placeholder="First Name (Optional)" value="Bryant"/>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-group">
+                <div class="form-md input-group mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="nLName"><i class="fa fa-user-o prefix"></i></span>
+                  </div>
+                  <input type="text" id="lname" class="form-control form-control-md validate"
+                    placeholder="Last Name (Optional)" value="Moreland"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-md input-group mb-4">
+              <div class="input-group-prepend mx">
+                <span class="input-group-text" id="pPass">
+                  <i class="fa fa-lock prefix"></i>
+                </span>
+              </div>
+              <input type="password" id="pPass"
+                class="form-control form-control-md validate mx-md rounded-right" placeholder="Old Password"
+                aria-describedby="passwordHelpInline" required />
+              <small id="passwordHelpInline" class="text-muted ml-3 mt-1">
+                *Must be 8-20 characters long.
+              </small>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-md input-group mb-4">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="cPass">
+                  <i class="fa fa-lock prefix"></i>
+                </span>
+              </div>
+              <input type="password" id="pNewPass" class="form-control form-control-md validate"
+                placeholder="New Password" required />
+            </div>
+          </div>
+          <div class="text-center form-md mt-2">
+            <button class="btn btn-light float-right">
+              Save <i class="fa fa-pencil ml-1"></i>
+            </button>
+          </div>
+        </div>
+      </form>
+      </div>
       </div>
       <div class="tab-pane" id="about" role="tabpanel">
         <p class="text-white">About</p>
@@ -194,6 +282,7 @@
           <div class="tab-content">
             <div class="tab-pane fade in show active" id="login" role="tabpanel">
               <div class="modal-body mb-1">
+                <form method="POST" action="test.php" role="form">
                 <div class="form-group">
                   <div class="md-form form-sm input-group mt-5 mb-5">
                     <div class="input-group-prepend">
@@ -215,7 +304,7 @@
                   </div>
                 </div>
                 <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="keepme" />
+                  <input type="checkbox" class="form-check-input" id="keepme">
                   <label class="form-check-label" for="#keepme">Keep me signed in</label>
                 </div>
                 <div class="text-center mt-2">
@@ -223,6 +312,7 @@
                     Log in <i class="fa fa-sign-in ml-1"></i>
                   </button>
                 </div>
+                </form>
               </div>
               <div class="modal-footer">
                 <div class="options text-center text-md-right mt-1">
@@ -239,6 +329,7 @@
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel">
               <div class="modal-body">
+              <form method="POST" action="test.php" role="form">
                 <div class="form-group">
                   <div class="md-form form-sm input-group mt-5 mb-4">
                     <div class="input-group-prepend">
@@ -256,12 +347,10 @@
                     <input type="text" id="username" class="form-control form-control-sm validate rounded-right"
                       placeholder="Username" aria-describedby="userHelpInline" required />
                     <small id="userHelpInline" class="text-muted ml-3 mt-1">
-                      *Minimum of 8 characters, must have letters, numbers,
-                      and any special characters.
+                      *Minimum of 8 characters, must have letters, numbers, and any special characters.
                     </small>
                   </div>
                 </div>
-
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
@@ -313,7 +402,7 @@
                   </div>
                 </div>
                 <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="tc" required />
+                  <input type="checkbox" class="form-check-input" id="tc" required>
                   <label class="form-check-label" for="#tc">
                     <a href="#termsandconditions" data-toggle="modal" role="tab">
                       Agree to Terms & Conditions
@@ -325,7 +414,8 @@
                     Sign up <i class="fa fa-sign-in ml-1"></i>
                   </button>
                 </div>
-              </div>
+              </form>
+            </div>
               <div class="modal-footer">
                 <div class="options text-right">
                   <p class="pt-1">
